--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,6 @@
 .home {
-  padding-top: 50px;
-  padding-left: 50px;
+  padding-top: 50px; 
+    display: inline-block;
+    margin: 0 auto;
+    min-width: 180px;
 }
